[gd_scene load_steps=17 format=3 uid="uid://c4cd34odmmos7"]

[ext_resource type="Script" uid="uid://d21lygikfbg08" path="res://scenes/machines/power_pole.gd" id="1_213qv"]
[ext_resource type="Texture2D" uid="uid://bc84nblp227ia" path="res://assets/sprites/power_pole.png" id="1_xfd3o"]
[ext_resource type="PackedScene" uid="uid://c7nx4xr0tlq18" path="res://scenes/machines/wire.tscn" id="2_tlqtr"]
[ext_resource type="PackedScene" uid="uid://cc3xw6g1jv8wm" path="res://scenes/machines/powered_wire.tscn" id="3_q7ibn"]
[ext_resource type="Gradient" uid="uid://dgn4q6wqo5ctv" path="res://resources/shadow_gradient.Gradient.tres" id="3_vfbas"]
[ext_resource type="PackedScene" uid="uid://ccjbkmd2fo5a6" path="res://scenes/tile_map_detection_area.tscn" id="6_n6t5w"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_exbia"]
gradient = ExtResource("3_vfbas")
width = 16
height = 6
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_e2qx3"]
atlas = ExtResource("1_xfd3o")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3qbj"]
atlas = ExtResource("1_xfd3o")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_k0cd2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2qx3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3qbj")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_4k6d5"]
lifetime_randomness = 0.2
particle_flag_disable_z = true
emission_shape_scale = Vector3(1, 0.4, 1)
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 1.0
emission_ring_radius = 10.0
emission_ring_inner_radius = 6.0
emission_ring_cone_angle = 90.0
angle_min = -180.0
angle_max = 180.0
radial_velocity_min = -2.23517e-05
radial_velocity_max = 30.0
scale_min = 0.5
scale_max = 1.5
color = Color(0.8517, 0.837, 0.9, 1)

[sub_resource type="Animation" id="Animation_r6m1m"]
resource_name = "power_off"
length = 0.01
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Body")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"frame", 0],
"method": &"set"
}]
}

[sub_resource type="Animation" id="Animation_y5a7m"]
resource_name = "power_on"
length = 0.01
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Body")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"frame", 1],
"method": &"set"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_chok4"]
_data = {
&"power_off": SubResource("Animation_r6m1m"),
&"power_on": SubResource("Animation_y5a7m")
}

[sub_resource type="Animation" id="Animation_e6imy"]
resource_name = "spawn"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/SpawnParticles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jho05"]
_data = {
&"spawn": SubResource("Animation_e6imy")
}

[node name="PowerPole" type="StaticBody2D" groups=["machines"]]
collision_layer = 8
collision_mask = 0
script = ExtResource("1_213qv")
wire_template = ExtResource("2_tlqtr")
powered_wire_template = ExtResource("3_q7ibn")

[node name="AttachmentPoint" type="Marker2D" parent="."]
position = Vector2(0, -24)

[node name="Visuals" type="CanvasGroup" parent="."]
y_sort_enabled = true

[node name="Shadow" type="Sprite2D" parent="Visuals"]
texture = SubResource("GradientTexture2D_exbia")

[node name="Body" type="AnimatedSprite2D" parent="Visuals"]
sprite_frames = SubResource("SpriteFrames_k0cd2")
offset = Vector2(0, -14)

[node name="SpawnParticles" type="GPUParticles2D" parent="Visuals"]
position = Vector2(0, -1)
emitting = false
amount = 64
lifetime = 0.1
one_shot = true
explosiveness = 0.1
visibility_rect = Rect2(-12.1448, -6.09782, 23.4457, 12.2191)
process_material = SubResource("ParticleProcessMaterial_4k6d5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_chok4")
}

[node name="SpawnAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_jho05")
}
autoplay = "spawn"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(4, 0, 0, 2, -4, 0, 0, -2)

[node name="Wires" type="CanvasGroup" parent="."]
z_index = 100

[node name="TileMapDetectionArea" parent="." node_paths=PackedStringArray("root_node") instance=ExtResource("6_n6t5w")]
visible = false
root_node = NodePath("..")
fill = true
